# harel-rust

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: full.yaml  minimal.yaml
src/: cel.rs  cli.rs  export.rs  lib.rs  loader.rs  machine.rs  model.rs  store.rs  validate.rs  value.rs
src/runtime/: mod.rs
tests/: conformance.rs  library_api.rs  meta.rs  native_values.rs
