[package]
name = "harel"
version = "0.0.2"
edition = "2021"
authors = ["fruwehq"]
license = "MIT"
description = "Rust implementation of the harel statechart engine (implements harel spec v0.0.2)"
repository = "https://github.com/fruwehq/harel-rust"
readme = "README.md"
exclude = ["conformance-suite/", ".github/"]

[lib]
name = "harel"
path = "src/lib.rs"

[[bin]]
name = "harel"
path = "src/bin/harel.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
