[package]
name = "determa-state"
version = "0.0.6"
edition = "2021"
authors = ["fruwehq"]
license = "MIT"
description = "Determa State — Rust implementation of the Determa statechart engine (implements Determa State spec v0.0.6)"
repository = "https://github.com/fruwehq/determa-state-rust"
readme = "README.md"
exclude = ["conformance-suite/", ".github/"]

[lib]
name = "determa_state"
path = "src/lib.rs"

[[bin]]
name = "determa-state"
path = "src/bin/determa_state.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
cel-interpreter = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
